基础模块接口初测完成
